/**
 * Copyright Â© 2016-2020 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package cluster;

option java_package = "org.thingsboard.server.gen.cluster";
option java_outer_classname = "ClusterAPIProtos";

service ClusterRpcService {
  rpc handleMsgs(stream ClusterMessage) returns (stream ClusterMessage) {}
}

message ClusterMessage {
  MessageType messageType = 1;
  MessageMataInfo messageMetaInfo = 2;
  ServerAddress serverAddress = 3;
  bytes payload = 4;
}

message ServerAddress {
  string host = 1;
  int32 port = 2;
}

message MessageMataInfo {
  string payloadMetaInfo = 1;
  repeated string tags = 2;
}

enum MessageType {

  //Cluster control messages
  RPC_SESSION_CREATE_REQUEST_MSG = 0;
  TO_ALL_NODES_MSG = 1;
  RPC_SESSION_TELL_MSG = 2;
  RPC_BROADCAST_MSG = 3;
  CONNECT_RPC_MESSAGE =4;

  CLUSTER_ACTOR_MESSAGE = 5;
  // Messages related to TelemetrySubscriptionService
  CLUSTER_TELEMETRY_SUBSCRIPTION_CREATE_MESSAGE = 6;
  CLUSTER_TELEMETRY_SUBSCRIPTION_UPDATE_MESSAGE = 7;
  CLUSTER_TELEMETRY_SUBSCRIPTION_CLOSE_MESSAGE = 8;
  CLUSTER_TELEMETRY_SESSION_CLOSE_MESSAGE = 9;
  CLUSTER_TELEMETRY_ATTR_UPDATE_MESSAGE = 10;
  CLUSTER_TELEMETRY_TS_UPDATE_MESSAGE = 11;
  CLUSTER_RPC_FROM_DEVICE_RESPONSE_MESSAGE = 12;

  CLUSTER_DEVICE_STATE_SERVICE_MESSAGE = 13;
  CLUSTER_TRANSACTION_SERVICE_MESSAGE = 14;
}

// Messages related to CLUSTER_TELEMETRY_MESSAGE


message FromDeviceRPCResponseProto {
    int64 requestIdMSB = 1;
    int64 requestIdLSB = 2;
    string response = 3;
    int32 error = 4;
}
